--- a/index.html
+++ b/index.html
@@ -29,8 +29,120 @@
         </div>
     </header>
     <!-- Header End -->
-    <main>
 
+    <!-- Main part start  -->
+    <main>
+        <!-- Players list -->
+        <section class="Container">
+           <div class="shadow-box">
+            <div class="Player-1">
+                <img src="images/players/player-2.png" alt="">
+            </div>
+            <div class="players-detail">
+                <h2>Leonel Messi</h2>
+                <p>Lionel Andrés Messi is an Argentine professional footballer who plays as a forward or an attacking midfielder and captains the Argentina national team. He is currently a free agent, having played all his professional career for La Liga club FC Barcelona, whom he captained from 2018 to 2021</p>
+            </div>
+           </div>
+           <div class="shadow-box">
+            <div class="Player-1">
+                <img src="images/players/player-2.png" alt="">
+            </div>
+            <div class="players-detail">
+                <h2>Leonel Messi</h2>
+                <p>Lionel Andrés Messi is an Argentine professional footballer who plays as a forward or an attacking midfielder and captains the Argentina national team. He is currently a free agent, having played all his professional career for La Liga club FC Barcelona, whom he captained from 2018 to 2021</p>
+            </div>
+           </div>
+           <div class="shadow-box">
+            <div class="Player-1">
+                <img src="images/players/player-2.png" alt="">
+            </div>
+            <div class="players-detail">
+                <h2>Leonel Messi</h2>
+                <p>Lionel Andrés Messi is an Argentine professional footballer who plays as a forward or an attacking midfielder and captains the Argentina national team. He is currently a free agent, having played all his professional career for La Liga club FC Barcelona, whom he captained from 2018 to 2021</p>
+            </div>
+           </div>
+           <div class="shadow-box">
+            <div class="Player-1">
+                <img src="images/players/player-2.png" alt="">
+            </div>
+            <div class="players-detail">
+                <h2>Leonel Messi</h2>
+                <p>Lionel Andrés Messi is an Argentine professional footballer who plays as a forward or an attacking midfielder and captains the Argentina national team. He is currently a free agent, having played all his professional career for La Liga club FC Barcelona, whom he captained from 2018 to 2021</p>
+            </div>
+           </div>
+           <div class="shadow-box">
+            <div class="Player-1">
+                <img src="images/players/player-2.png" alt="">
+            </div>
+            <div class="players-detail">
+                <h2>Leonel Messi</h2>
+                <p>Lionel Andrés Messi is an Argentine professional footballer who plays as a forward or an attacking midfielder and captains the Argentina national team. He is currently a free agent, having played all his professional career for La Liga club FC Barcelona, whom he captained from 2018 to 2021</p>
+            </div>
+           </div>
+           <div class="shadow-box">
+            <div class="Player-1">
+                <img src="images/players/player-2.png" alt="">
+            </div>
+            <div class="players-detail">
+                <h2>Leonel Messi</h2>
+                <p>Lionel Andrés Messi is an Argentine professional footballer who plays as a forward or an attacking midfielder and captains the Argentina national team. He is currently a free agent, having played all his professional career for La Liga club FC Barcelona, whom he captained from 2018 to 2021</p>
+            </div>
+           </div>
+           <div class="shadow-box">
+            <div class="Player-1">
+                <img src="images/players/player-2.png" alt="">
+            </div>
+            <div class="players-detail">
+                <h2>Leonel Messi</h2>
+                <p>Lionel Andrés Messi is an Argentine professional footballer who plays as a forward or an attacking midfielder and captains the Argentina national team. He is currently a free agent, having played all his professional career for La Liga club FC Barcelona, whom he captained from 2018 to 2021</p>
+            </div>
+           </div>
+           <div class="shadow-box">
+            <div class="Player-1">
+                <img src="images/players/player-2.png" alt="">
+            </div>
+            <div class="players-detail">
+                <h2>Leonel Messi</h2>
+                <p>Lionel Andrés Messi is an Argentine professional footballer who plays as a forward or an attacking midfielder and captains the Argentina national team. He is currently a free agent, having played all his professional career for La Liga club FC Barcelona, whom he captained from 2018 to 2021</p>
+            </div>
+           </div>
+           <div class="shadow-box">
+            <div class="Player-1">
+                <img src="images/players/player-2.png" alt="">
+            </div>
+            <div class="players-detail">
+                <h2>Leonel Messi</h2>
+                <p>Lionel Andrés Messi is an Argentine professional footballer who plays as a forward or an attacking midfielder and captains the Argentina national team. He is currently a free agent, having played all his professional career for La Liga club FC Barcelona, whom he captained from 2018 to 2021</p>
+            </div>
+           </div>
+           <div class="shadow-box">
+            <div class="Player-1">
+                <img src="images/players/player-2.png" alt="">
+            </div>
+            <div class="players-detail">
+                <h2>Leonel Messi</h2>
+                <p>Lionel Andrés Messi is an Argentine professional footballer who plays as a forward or an attacking midfielder and captains the Argentina national team. He is currently a free agent, having played all his professional career for La Liga club FC Barcelona, whom he captained from 2018 to 2021</p>
+            </div>
+           </div>
+           <div class="shadow-box">
+            <div class="Player-1">
+                <img src="images/players/player-2.png" alt="">
+            </div>
+            <div class="players-detail">
+                <h2>Leonel Messi</h2>
+                <p>Lionel Andrés Messi is an Argentine professional footballer who plays as a forward or an attacking midfielder and captains the Argentina national team. He is currently a free agent, having played all his professional career for La Liga club FC Barcelona, whom he captained from 2018 to 2021</p>
+            </div>
+           </div>
+           <div class="shadow-box">
+            <div class="Player-1">
+                <img src="images/players/player-2.png" alt="">
+            </div>
+            <div class="players-detail">
+                <h2>Leonel Messi</h2>
+                <p>Lionel Andrés Messi is an Argentine professional footballer who plays as a forward or an attacking midfielder and captains the Argentina national team. He is currently a free agent, having played all his professional career for La Liga club FC Barcelona, whom he captained from 2018 to 2021</p>
+            </div>
+           </div>
+        </section>
     </main>
 </body>
 </html>
